# DeepRust

./: Cargo.toml  README.md
deeprust/: Cargo.toml
deeprust/src/: function.rs  layer.rs  lib.rs  weight.rs
deeprust/src/function/: non_linear.rs
test_libs/: Cargo.toml
